run scripts fix