@@ -7,6 +7,7 @@ SCRIPT_DIR="$(dirname "$0")"
 java -Xmx2g \
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager \
 -XX:+UseParallelGC -XX:CompileThreshold=10 -XX:ParallelGCThreads=1 -XX:MaxInlineSize=64 -XX:MaxInlineLevel=5 \
+--add-opens java.base/java.lang=KiCadLogicalSchemeSimulator.simulator \
 -p "${SCRIPT_DIR}":"${SCRIPT_DIR}/lib":"${SCRIPT_DIR}/schemaParts" \
 --patch-module KiCadLogicalSchemeSimulator.simulator="${SCRIPT_DIR}/optimised" \
 -m KiCadLogicalSchemeSimulator.simulator/pko.KiCadLogicalSchemeSimulator.Simulator -od="${SCRIPT_DIR}/optimised" -m="${SCRIPT_DIR}/kicad.sym_map" -m="${SCRIPT_DIR}/retro.sym_map" -m="${SCRIPT_DIR}/chip.sym_map" "$@"
